# FileShare

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.ps1  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: main.py
app/api/: files.py
app/core/: config.py  logger.py  paths.py
app/models/: schemas.py
app/services/: file_service.py
static/: index.html
tests/: test_api.py  test_file_service.py
