[project]
name = "fileshare"
version = "1.2.0"
description = "A FastAPI-based local network file sharing service with drag-and-drop upload, file management, and mobile responsive design"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.27.0",
    "git-changelog>=2.9.3",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
line-length = 127
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
